Revising lang system